  [bug introduced in sh-utils-1.16]

  split --number l/... no longer creates extraneous files in certain cases.
  [bug introduced in coreutils-8.8]

  timeout now sends signals to commands that create their own process group.
  timeout is no longer confused when starting off with a child process.
  [bugs introduced in coreutils-7.0]

** Changes in behavior

  chmod, chown and chgrp now output the original attributes in messages,
  when -v or -c specified.

** New features

  split accepts a new --filter=CMD option.  With it, split filters output
  through CMD.  CMD may use the $FILE environment variable, which is set to
  the nominal output file name for each invocation of CMD.  For example, to
  split a file into 3 approximately equal parts, which are then compressed:
    split -n3 --filter='xz > $FILE.xz' big
  Note the use of single quotes, not double quotes.
  That creates files named xaa.xz, xab.xz and xac.xz.

  md5sum accepts the new --strict option.  With --check, it makes the
  tool exit non-zero for any invalid input line, rather than just warning.
  This also affects sha1sum, sha224sum, sha384sum and sha512sum.

  timeout accepts a new --foreground option, to support commands not started
  directly from a shell prompt, where the command is interactive or needs to
  receive signals initiated from the terminal.

** Improvements

  shuf outputs small subsets of large permutations much more efficiently.
  For example `shuf -i1-$((2**32-1)) -n2` no longer exhausts memory.

  cp and ls now support HP-UX 11.11's ACLs, thanks to improved support
  in gnulib.

  stat -f now recognizes the GPFS, MQUEUE and PSTOREFS file system types.

** Build-related

  Changes inherited from gnulib address a build failure on HP-UX 11.11
  when using /opt/ansic/bin/cc.


* Noteworthy changes in release 8.12 (2011-04-26) [stable]

** Bug fixes

  tail's --follow=name option no longer implies --retry on systems
  with inotify support.  [bug introduced in coreutils-7.5]
