@@ -18,6 +18,11 @@ GNU coreutils NEWS                                    -*- outline -*-
   timeout is no longer confused when starting off with a child process.
   [bugs introduced in coreutils-7.0]
 
+  unexpand -a now aligns correctly when there are spaces spanning a tabstop,
+  followed by a tab.  In that case a space was dropped, causing misalignment.
+  We also now ensure that a space never precedes a tab.
+  [bug introduced in coreutils-5.3.0]
+
 ** Changes in behavior
 
   chmod, chown and chgrp now output the original attributes in messages,
